--- a/大数据分布式计算/labs/lab1/spj供应商数据库.ipynb
+++ b/大数据分布式计算/labs/lab1/spj供应商数据库.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * mysql+pymysql://root:***@localhost\n",
+      " * mysql+pymysql://root@localhost\n",
       "1 rows affected.\n"
      ]
     }
@@ -19,9 +19,9 @@
     "\n",
     "import pymysql \n",
     "pymysql.install_as_MySQLdb()\n",
-    "%sql mysql+pymysql://root:my-secret-pw@localhost\n",
+    "%sql mysql+pymysql://root@localhost\n",
     "%sql create database if not exists spj\n",
-    "%sql mysql+pymysql://root:my-secret-pw@localhost/spj"
+    "%sql mysql+pymysql://root@localhost/spj"
    ]
   },
   {
@@ -33,8 +33,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   mysql+pymysql://root:***@localhost\n",
-      " * mysql+pymysql://root:***@localhost/spj\n",
+      "   mysql+pymysql://root@localhost\n",
+      " * mysql+pymysql://root@localhost/spj\n",
       "0 rows affected.\n",
       "0 rows affected.\n",
       "0 rows affected.\n",
@@ -356,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -370,11 +370,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "cccc6b24c42b92f0f5397c28f29e0b94ee4e833e31f323dd2f4eab36a0e1136b"
    }
   }
  },
