--- a/大数据分析计算机基础/homework/final/db_to_tables.ipynb
+++ b/大数据分析计算机基础/homework/final/db_to_tables.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,18 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "connection = sqlite3.connect('./latest.db')\n",
-    "df = pd.read_sql_query(\"SELECT * FROM YEAR_RANGE_CODES\", connection)\n",
+    "df = pd.read_sql_query(\"SELECT * FROM ASSOC_DATA\", connection)\n",
     "connection.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,77 +181,369 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>c_range_code</th>\n",
-       "      <th>c_range</th>\n",
-       "      <th>c_range_chn</th>\n",
-       "      <th>c_approx</th>\n",
-       "      <th>c_approx_chn</th>\n",
+       "      <th>tts_sysno</th>\n",
+       "      <th>c_assoc_code</th>\n",
+       "      <th>c_personid</th>\n",
+       "      <th>c_kin_code</th>\n",
+       "      <th>c_kin_id</th>\n",
+       "      <th>c_assoc_id</th>\n",
+       "      <th>c_assoc_kin_code</th>\n",
+       "      <th>c_assoc_kin_id</th>\n",
+       "      <th>c_tertiary_personid</th>\n",
+       "      <th>c_tertiary_type_notes</th>\n",
+       "      <th>...</th>\n",
+       "      <th>c_text_title</th>\n",
+       "      <th>c_assoc_claimer_id</th>\n",
+       "      <th>c_assoc_intercalary</th>\n",
+       "      <th>c_assoc_month</th>\n",
+       "      <th>c_assoc_day</th>\n",
+       "      <th>c_assoc_day_gz</th>\n",
+       "      <th>c_created_by</th>\n",
+       "      <th>c_created_date</th>\n",
+       "      <th>c_modified_by</th>\n",
+       "      <th>c_modified_date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>87881.0</td>\n",
        "      <td>-1</td>\n",
-       "      <td>before</td>\n",
-       "      <td>之前</td>\n",
-       "      <td>-</td>\n",
-       "      <td>小於</td>\n",
+       "      <td>29876</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30232</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TAUOS</td>\n",
+       "      <td>20160711</td>\n",
+       "      <td>Hongsu Wang</td>\n",
+       "      <td>20201006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>87882.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>30232</td>\n",
        "      <td>0</td>\n",
-       "      <td>during</td>\n",
-       "      <td>之間</td>\n",
-       "      <td>=</td>\n",
-       "      <td>恰好</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29876</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TAUOS</td>\n",
+       "      <td>20160711</td>\n",
+       "      <td>Hongsu Wang</td>\n",
+       "      <td>20201006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>after</td>\n",
-       "      <td>之後</td>\n",
-       "      <td>+</td>\n",
-       "      <td>大於</td>\n",
+       "      <td>135180.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28347</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>347742</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>李铮</td>\n",
+       "      <td>20210419</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>around</td>\n",
-       "      <td>約</td>\n",
-       "      <td>around</td>\n",
-       "      <td>約</td>\n",
+       "      <td>135268.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29570</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>513215</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>李铮</td>\n",
+       "      <td>20210504</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>300</td>\n",
-       "      <td>960-1082</td>\n",
-       "      <td>元豐五年前</td>\n",
+       "      <td>135342.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30374</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>133466</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>李铮</td>\n",
+       "      <td>20210519</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>301</td>\n",
-       "      <td>1082-1279</td>\n",
-       "      <td>元豐五年後</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161306</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>615</td>\n",
+       "      <td>511491</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61759</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>load</td>\n",
+       "      <td>20210311</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161307</th>\n",
+       "      <td>135505.0</td>\n",
+       "      <td>634</td>\n",
+       "      <td>59381</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58944</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>wangyining</td>\n",
+       "      <td>20210720</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161308</th>\n",
+       "      <td>135506.0</td>\n",
+       "      <td>635</td>\n",
+       "      <td>58944</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59381</td>\n",
+       "      <td>59381</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59381</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>wangyining</td>\n",
+       "      <td>20210720</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161309</th>\n",
+       "      <td>136088.0</td>\n",
+       "      <td>636</td>\n",
+       "      <td>211</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22849</td>\n",
+       "      <td>22849</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22849</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ning Hao</td>\n",
+       "      <td>20211006</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161310</th>\n",
+       "      <td>136087.0</td>\n",
+       "      <td>636</td>\n",
+       "      <td>22849</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>211</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[n/a]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ning Hao</td>\n",
+       "      <td>20211006</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>161311 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   c_range_code    c_range c_range_chn c_approx c_approx_chn\n",
-       "0            -1     before          之前        -           小於\n",
-       "1             0     during          之間        =           恰好\n",
-       "2             1      after          之後        +           大於\n",
-       "3             2     around           約   around            約\n",
-       "4           300   960-1082       元豐五年前     None         None\n",
-       "5           301  1082-1279       元豐五年後     None         None"
+       "        tts_sysno  c_assoc_code  c_personid  c_kin_code  c_kin_id  c_assoc_id  \\\n",
+       "0         87881.0            -1       29876           0         0       30232   \n",
+       "1         87882.0            -1       30232           0         0       29876   \n",
+       "2        135180.0             0       28347           0         0      347742   \n",
+       "3        135268.0             0       29570           0         0      513215   \n",
+       "4        135342.0             0       30374           0         0      133466   \n",
+       "...           ...           ...         ...         ...       ...         ...   \n",
+       "161306        NaN           615      511491           0         0       61759   \n",
+       "161307   135505.0           634       59381           0         0       58944   \n",
+       "161308   135506.0           635       58944           0     59381       59381   \n",
+       "161309   136088.0           636         211           0     22849       22849   \n",
+       "161310   136087.0           636       22849           0         0         211   \n",
+       "\n",
+       "        c_assoc_kin_code  c_assoc_kin_id  c_tertiary_personid  \\\n",
+       "0                      0               0                  0.0   \n",
+       "1                      0               0                  0.0   \n",
+       "2                      0               0                  0.0   \n",
+       "3                      0               0                  0.0   \n",
+       "4                      0               0                  0.0   \n",
+       "...                  ...             ...                  ...   \n",
+       "161306                 0               0                  NaN   \n",
+       "161307                 0               0                  0.0   \n",
+       "161308                 0           59381                  0.0   \n",
+       "161309                 0           22849                  0.0   \n",
+       "161310                 0               0                  0.0   \n",
+       "\n",
+       "       c_tertiary_type_notes  ...  c_text_title  c_assoc_claimer_id  \\\n",
+       "0                       None  ...         [n/a]                 0.0   \n",
+       "1                       None  ...         [n/a]                 0.0   \n",
+       "2                       None  ...         [n/a]                 NaN   \n",
+       "3                       None  ...         [n/a]                 NaN   \n",
+       "4                       None  ...         [n/a]                 NaN   \n",
+       "...                      ...  ...           ...                 ...   \n",
+       "161306                  None  ...         [n/a]                 NaN   \n",
+       "161307                  None  ...         [n/a]                 0.0   \n",
+       "161308                  None  ...         [n/a]                 0.0   \n",
+       "161309                  None  ...         [n/a]                 0.0   \n",
+       "161310                  None  ...         [n/a]                 0.0   \n",
+       "\n",
+       "        c_assoc_intercalary  c_assoc_month c_assoc_day c_assoc_day_gz  \\\n",
+       "0                         0            NaN         NaN            NaN   \n",
+       "1                         0            NaN         NaN            NaN   \n",
+       "2                         0            NaN         NaN            NaN   \n",
+       "3                         0            NaN         NaN            NaN   \n",
+       "4                         0            NaN         NaN            NaN   \n",
+       "...                     ...            ...         ...            ...   \n",
+       "161306                    0            NaN         NaN            NaN   \n",
+       "161307                    0            NaN         NaN            NaN   \n",
+       "161308                    0            NaN         NaN            NaN   \n",
+       "161309                    0            NaN         NaN            NaN   \n",
+       "161310                    0            NaN         NaN            NaN   \n",
+       "\n",
+       "       c_created_by  c_created_date  c_modified_by  c_modified_date  \n",
+       "0             TAUOS        20160711    Hongsu Wang         20201006  \n",
+       "1             TAUOS        20160711    Hongsu Wang         20201006  \n",
+       "2                李铮        20210419           None             None  \n",
+       "3                李铮        20210504           None             None  \n",
+       "4                李铮        20210519           None             None  \n",
+       "...             ...             ...            ...              ...  \n",
+       "161306         load        20210311                                  \n",
+       "161307   wangyining        20210720           None             None  \n",
+       "161308   wangyining        20210720           None             None  \n",
+       "161309     Ning Hao        20211006           None             None  \n",
+       "161310     Ning Hao        20211006           None             None  \n",
+       "\n",
+       "[161311 rows x 36 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
